add the comments and remove the errors of sonarQube